2006-01-04  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/Makefile:
	* nsd/nsmain.c:
	* nsd/sock.c:
	* nsd/task.c: Backport AOLserver task queues.  Callbacks are
	registered to run in a seperate thread in response to socket
	read/write events.

2005-12-30  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/init.c:
	* nsd/urlspace.c:
	* tests/url2file.test: Split the urlspace by key ID and remove the
	global lock. Remove unused Ns_ServerSpecific*() routines.

	Make NsUrlSpecificWalk() emit an entry for both inherit and
	noinherit data, identifying each with a keyword.  Don't emit the
	server name, which is redundant, and separate the URL from the
	filter. (RFE: 1377113)

	* nsd/op.c:
	* nsd/url2file.c: Clarify naming of urlspecifc walk callbacks.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/init.c:
	* nsd/proc.c:
	* nsd/cache.c: Global hash of cache names removed; access no
	longer available via Ns_CacheFind() or ns_cache_names.  Caches
	have unique locking requirements and lifetimes which could be
	violated by e.g. running ns_cache_stats on a thread local cache as the
	thread is exiting.

	New Ns_CacheCreateEx() allows creating a cache which has both a
	size and a time limit.

	Caches with time limits are calculated differently.  Previous
	behaviour was to periodically check the last access time of each
	cache entry and flush those which had expired.  A busy cache could
	grow without bound.  New behaviour is to check for expirey each time
	an entry is retrieved from the cache.  All caches can (and should)
	be size limited.  Timeouts may be specified per cache and per
	entry using new Ns_CacheSetValueExpires().

	Ns_CacheFlush() now returns the number of entries flushed.

	New Ns_CacheStats() takes over from ns_cache_stats for non-Tcl
	caches. Stats are returned in Tcl "array get" format.

	Removed Ns_CacheMalloc(), Ns_CacheFree() and Ns_CacheName().

	Move Tcl commands to tclcache.c.

	* nsd/Makefile:
	* nsd/tclcmds.c: